--- a/tool/vscode/常用扩展插件.md
+++ b/tool/vscode/常用扩展插件.md
@@ -1,1 +1,153 @@
-# 常用扩展插件
+## Code Runner (运行代码) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=formulahendry.code-runner">一键安装</MTargetBlank>
+1. 可以让你在 vscode 里方便的运行某个文件或者运行选取的某段代码。
+
+![Code Runner](/vscode/coderunner.jpg)
+
+## Code Spell Checker (拼写检查) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=streetsidesoftware.code-spell-checker">一键安装</MTargetBlank>
+1. 检测你写代码时拼写的单词是否正确
+
+![Code Spell Checker](/vscode/codespell.jpg)
+
+## ~~Bracket Pair Colorizer~~<Badge type="warning" text="废弃，已集成到VSCode" /> (括号高亮)
+1. 给你的括号用颜色标记一下，这样当你的函数块里面有很多嵌套，就比较容易理清楚。
+
+![Bracket Pair Colorizer](/vscode/bracketpair.jpg)
+     
+## ESLint（代码检查）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint">一键安装</MTargetBlank>
+1. 代码检查及错误提示。
+2. 结合 Prettier 插件可以让我们快速格式化代码。
+
+![ESLint](/vscode/eslint.png)
+
+## Prettier (代码格式) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode">一键安装</MTargetBlank>
+1. 格式化代码，规范代码风格
+
+![Prettier](/vscode/prettier.png)
+
+## Vetur (Vue2代码补全) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=octref.vetur">一键安装</MTargetBlank>
+1. 写Vue2必备插件
+2. 高亮、语法提示
+
+![Vetur](/vscode/vetur.png)
+
+## Volar (Vue3代码补全) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=Vue.volar">一键安装</MTargetBlank>
+1. 写Vue3必备插件
+2. 高亮、语法提示
+
+![Volar](/vscode/volar.jpg)
+
+## Atom One Dark Theme (Atom主题) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=akamud.vscode-theme-onedark">一键安装</MTargetBlank>
+1. 一个 vscode 的主题，默认的主题比较丑
+
+![Atom One Dark Theme](/vscode/atom.png)
+
+## Chinese Language Pack for Visual Studio Code (中文插件) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=MS-CEINTL.vscode-language-pack-zh-hans">一键安装</MTargetBlank>
+1. 可以帮你把 vscode 语言换成中文的
+
+![Chinese Language Pack for Visual Studio Code](/vscode/chinese.png)
+
+## Auto Rename Tag（自动修改标签名）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-rename-tag">一键安装</MTargetBlank>
+1. 开闭标签同时改
+
+![Auto Rename Tag](/vscode/autoRenameTag.png)
+
+## Auto Close Tag（自动闭合标签）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-close-tag">一键安装</MTargetBlank>
+1. 自动闭合标签
+
+![Auto Close Tag](/vscode/autoCloseTag.png)
+
+## Git Lens (git可视化) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens">一键安装</MTargetBlank>
+1. 可视化Git
+
+![Git Lens](/vscode/gitLen.png)
+
+## Live Server (文件服务) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer">一键安装</MTargetBlank>
+1. Hot Reload Web Server
+
+![Live Server](/vscode/liveServer.png)
+
+## Rest Client（客户端请求）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=humao.rest-client">一键安装</MTargetBlank>
+![Rest Client](/vscode/restClient.png)
+
+### 使用
+创建.http结尾的文件
+```
+GET https://www.baidu.com HTTP/1.1
+
+###
+
+GET https://example.com/topics/1 HTTP/1.1
+
+###
+
+POST https://example.com/comments HTTP/1.1
+content-type: application/json
+
+{
+  "name": "sample",
+  "time": "Wed, 21 Oct 2015 18:27:50 GMT"
+}
+```
+
+## koroFileHeader (自动添加注释) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=OBKoro1.korofileheader">一键安装</MTargetBlank>
+1. 自动添加注释
+
+![koroFileHeader](/vscode/koroFileHeader.png)
+
+## Todo Tree（任务备注）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=Gruntfuggly.todo-tree">一键安装</MTargetBlank>
+1. 任务备注
+
+![Todo Tree](/vscode/todoTree.png)
+
+## Polacode-(2019/2020)（代码截图）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=jeff-hykin.polacode-2019">一键安装</MTargetBlank>
+
+![Polacode](/vscode/polacode.png)
+
+### 使用方式
+输入命令：
+
+1、command + shift + p
+
+2、输入polacode
+
+### 效果
+![Polacode](/vscode/polacode2.png)
+
+## Markdown Preview Enhanced（markdown预览）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=shd101wyy.markdown-preview-enhanced">一键安装</MTargetBlank>
+1. markdown实时预览
+
+![Markdown Preview Enhanced](/vscode/markdownPreviewEnhanced.png)
+
+## Import Cost（引入库的大小）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=wix.vscode-import-cost">一键安装</MTargetBlank>
+1. 展示引入库的大小
+
+![Import Cost](/vscode/importCost.png)
+
+## translate speaker（翻译朗读）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=pcloth.translate-speaker">一键安装</MTargetBlank>
+1. 翻译朗读选中的内容
+2. 将翻译结果替换选中的内容
+
+![translate speaker](/vscode/translateSpeaker.jpg)
+
+## Thunder Client (api请求) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=rangav.vscode-thunder-client">一键安装</MTargetBlank>
+1. 可视化api请求
+2. 简易版postman
+
+![Thunder Client](/vscode/thunderClient.png)
+
+### 效果
+![Thunder Client](/vscode/thunderClient2.png)
+
+## Error Tips（错误提示）<MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens">一键安装</MTargetBlank>
+1. 将错误直接展示在代码行
+2. 可视化错误
+
+![Error Tips](/vscode/errorTips.jpg)
+
+### 效果
+![Error Tips](/vscode/errTips2.png)
+
+## Partial DIff (代码对比) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=ryu1kn.partial-diff">一键安装</MTargetBlank>
+1. 代码差异对比
+
+![Partial DIff](https://raw.githubusercontent.com/ryu1kn/vscode-partial-diff/master/images/public.gif)
