--- a/f2e/script/js/开发实用技巧.md
+++ b/f2e/script/js/开发实用技巧.md
@@ -160,7 +160,22 @@ const toBoolean = (val) => {
 <button :style="{ border: '1px solid #ccc', marginRight: '10px' }" @click="click2">name改变事件</button>
 <button :style="{ border: '1px solid #ccc' }" @click="click3">age改变事件</button>
 
-## 4、
+## 4、Array.from创建数组
+```js
+Array.from([1, 2, 3])
+
+Array.from({ 0: 1, 1: 2, length: 4 })
+
+Array.from({ length: 4 }, (_, i) => i + 1)
+
+Array.from({ ...[1,2], length: 4 })
+
+const arr = [1, 2, 3]
+arr.length = 4
+Array.from(arr).map((item, index) => {
+  arr[index] = item + 1 // 修改原数组
+})
+```
 
 <script setup>
   import { ref } from 'vue'
