--- a/phone/oc/开发实用技巧.md
+++ b/phone/oc/开发实用技巧.md
@@ -206,3 +206,12 @@ dispatch_async(dispatch_get_global_queue(0, 0), ^{
 ```
 
 ### 9.2、
+
+## 10、加载离线包
+```shell
+NSString *basePath = [NSString stringWithFormat: @"%@/%@", [[NSBundle mainBundle] bundlePath], @"2.2.13"];
+NSURL *baseUrl = [NSURL fileURLWithPath: basePath isDirectory: YES];
+NSString *filePath = [NSString stringWithFormat: @"file://%@/index.html#/page", basePath];
+NSURL *fileUrl = [NSURL URLWithString: filePath];
+[self.webview loadFileURL: fileUrl allowingReadAccessToURL: baseUrl];
+```
