--- a/backend/rust/开发案例.md
+++ b/backend/rust/开发案例.md
@@ -408,3 +408,126 @@ mod tests {
     }
 }
 ```
+
+## 5、进度条
+```js
+use std::io::{stdout, Result, Write};
+use std::time::Duration;
+use std::thread::sleep;
+
+fn main() -> Result<()> {
+    const BAR_LAB: &str = "-\\|/";
+    for per in 0..101 {
+            print!("\r {} \u{1b}[42m{}\u{1b}[0m [ {}% ] ", 
+            BAR_LAB.chars().nth(per % 4).unwrap(), 
+            " ".repeat(per / 2), 
+            per
+        );
+        stdout().flush()?;
+        sleep(Duration::from_micros(60_000));
+    }
+    println!();
+    Ok(())
+}
+```
+
+## 6、转json
+### 6.1、字符串转json
+```js
+use serde_json::Value;
+
+fn main() {
+    let json = r#"
+    {
+      "article": "how to work with json in Rust",
+      "author": "tdep",
+      "paragraph": [
+        {
+          "name": "untyped"
+        },
+        {
+          "name": "strongly typed"
+        },
+        {
+          "name": "writing json"
+        }
+      ]
+    }
+    "#;
+    let parsed: Value = serde_json::from_str(json).unwrap();
+    println!("{}-{}", parsed, parsed["article"]);
+}
+```
+
+### 6.2、字符串转结构体
+```js
+use serde::{Serialize, Deserialize};
+
+#[derive(Serialize, Deserialize, Debug)]
+struct Paragraph {
+    name: String,
+}
+
+#[derive(Serialize, Deserialize, Debug)]
+struct Article {
+    article: String,
+    author: String,
+    paragraph: Vec<Paragraph>,
+}
+
+fn main() {
+    let json = r#"
+    {
+      "article": "how to work with json in Rust",
+      "author": "tdep",
+      "paragraph": [
+        {
+          "name": "untyped"
+        },
+        {
+          "name": "strongly typed"
+        },
+        {
+          "name": "writing json"
+        }
+      ]
+    }
+    "#;
+    let parsed: Article = serde_json::from_str(json).unwrap();
+    println!("{:?}", parsed);
+}
+```
+
+### 6.3、结构体转字符串
+```js
+use serde::{Deserialize, Serialize};
+
+#[derive(Serialize, Deserialize, Debug)]
+struct Paragraph {
+    name: String,
+}
+
+#[derive(Serialize, Deserialize, Debug)]
+struct Article {
+    article: String,
+    author: String,
+    paragraph: Vec<Paragraph>,
+}
+
+fn main() {
+    let article: Article = Article {
+        article: String::from("article name"),
+        author: String::from("author name"),
+        paragraph: vec![
+            Paragraph {
+                name: String::from("paragraph 1")
+            },
+            Paragraph {
+                name: String::from("paragraph 2")
+            }
+        ],
+    };
+    let json = serde_json::to_string(&article).unwrap();
+    println!("{}", json);
+}
+```
