--- a/backend/rust/常用三方库.md
+++ b/backend/rust/常用三方库.md
@@ -1,2 +1,30 @@
 # 常用三方库
-## 1、
+## 1、cargo-watch
+### 1.1、安装
+地址： https://crates.io/crates/cargo-watch
+
+```shell
+cargo install cargo-watch
+```
+
+### 1.2、使用
+```shell
+cargo watch -q -c -w src -x run
+```
+
+### 1.3、查看帮助
+```shell
+cargo watch --help
+```
+
+## 2、tokio
+### 2.1、安装
+```js
+[dependencies]
+tokio = { version = "1.0", features = ["full"] }
+```
+
+### 2.2、使用
+#### 2.2.1、简单示例
+```js
+```
